# finance_tools

./: .gitignore  ANALYSIS_RESULTS_OPTIMIZATION.md  CLEANUP_SUMMARY.md  DOWNLOAD_MANAGER_FIX.md  DOWNLOAD_PROGRESS_ANALYSIS.md  DUAL_FUND_DOWNLOAD_IMPLEMENTATION.md  EMA_REGIME_SCANNER_IMPLEMENTATION.md  ETF_PLUGIN_REFACTOR_SUMMARY.md  ETF_SCAN_COMPONENTS_FIX_SUMMARY.md  ETF_SCAN_FIX_SUMMARY.md  ETF_SCAN_IMPLEMENTATION.md  FRONTEND_SETUP.md  JSON_NULL_FIX.md  LICENSE  MANIFEST.in  PHASE_1_2_COMPLETED.md  PROGRESS_BAR_FIX.md  PROGRESS_DISPLAY_STATUS.md  README.md  REALTIME_LOGS_FIX.md  REALTIME_PROGRESS_IMPLEMENTATION.md  RERUN_IMPLEMENTATION_SUMMARY.md  RESTART_INSTRUCTIONS.md  STOCKS_IMPLEMENTATION_PLAN.md  STOCK_DATABASE_FIX.md  STOCK_RECORDS_PROGRESS_FIX.md  TECHNICAL_CHART_COMPONENT.md  TEST_DATABASE_CONFIGURATION.md  UNIFIED_DOWNLOAD_JOBS_UI.md  UNIFIED_DOWNLOAD_TRACKING.md  UNIFIED_IMPLEMENTATION_PROGRESS.md  create_analysis_tables.py  download_tefas_data.py  etf_OKS_scan_results_10Sep_2025.md  example_access_patterns.py  example_as_df_method.py  example_get_as_df.py  example_multiple_stocks.py  example_simplified_download.py  fix_indicators.py  (+21 more)
backend/: README.md  main.py  requirements.txt
documents/: BACKEND_DATABASE_FIX.md  BACKEND_IMPROVEMENTS.md  CORS_FIX.md  DOWNLOAD_JOBS_FIX.md  DOWNLOAD_MODAL_IMPLEMENTATION.md  EMA_CALCULATION_EXPLANATION.md  EMA_REGIME_INDICATORS_IMPLEMENTATION.md  ETF_SCAN_COMPONENTS_ANALYSIS.md  ETF_SCAN_FINAL_FIX.md  FRONTEND_COMPILATION_FIX.md  FRONTEND_FIXES.md  INDICATOR_ARCHITECTURE_IMPLEMENTATION.md  INDICATOR_ARCHITECTURE_PLAN.md  PANDAS_WARNING_FIX.md  PROGRESS_LOG_FIX.md  REALTIME_PROGRESS_DEBUG_FIX.md  RERUN_INDICATORS_FIX.md  STOCK_DISPLAY_FIX.md  STOCK_FRONTEND_IMPLEMENTATION.md  STOCK_IMPLEMENTATION_PHASE_3_4.md  STOCK_PROGRESS_FIX.md  SUMMARY_OF_CHANGES.md  TYPESCRIPT_FIXES.md  TYPESCRIPT_PROGRESS_FIX.md  UNIFIED_TECHNICAL_ANALYSIS_PLAN.md
finance_tools/: __init__.py  cli.py  config.py  logging.py  metrics.py
finance_tools/analysis/: README.md  __init__.py  advanced_example.py  analysis.py  config.py  example_usage.py  test_analysis.py  test_example.py  utils.py
finance_tools/analysis/indicators/: __init__.py  base.py  compatibility.py  registry.py
finance_tools/analysis/patterns/: __init__.py  pattern_detector.py  pattern_types.py
finance_tools/analysis/portfolio/: __init__.py  portfolio_optimizer.py  portfolio_suggester.py  portfolio_types.py
finance_tools/analysis/scanner/: __init__.py  scanner_types.py  stock_scanner.py
finance_tools/analysis/signals/: __init__.py  signal_calculator.py  signal_types.py
finance_tools/analysis/suggestions/: __init__.py  suggestion_engine.py  suggestion_types.py
finance_tools/analytics/: service.py
finance_tools/etfs/: __init__.py
finance_tools/etfs/analysis/: README.md  __init__.py  analyzer.py  filters.py  indicators.py  retriever.py  scanner.py  scanner_types.py  types.py
finance_tools/etfs/tefas/: __init__.py  crawler.py  downloader.py  models.py  repository.py  repository.py.backup  schema.py  service.py
finance_tools/stocks/: __init__.py  models.py  repository.py  service.py
finance_tools/stocks/analysis/: __init__.py  additional_indicators.py  analyzer.py  indicators.py  retriever.py  scanner.py  scanner_types.py  types.py
finance_tools/utils/: dataframe_utils.py  result_container.py  simple_result.py
frontend/: README.md  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/services/: api.ts
tests/: test_etf_analysis.py  test_executive_summary.py  test_get_as_df.py  test_index_column_fix.py  test_simple.py  test_stock_progress.py  test_tefas_chunking.py  test_tefas_db.py  test_unified_registry.py  test_yfinance.py
(+95 files in other folders)
